third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_pack_invalid.exp

Diagnostics:
error: expected `integer` but found `bool`
   ┌─ tests/checking/typing/type_variable_join_threaded_pack_invalid.move:42:9
   │
42 │         b
   │         ^
